# weather_cli

./: Cargo.toml  LICENSE  README.md
.rpm/: weatherCLI.spec
src/: error.rs  main.rs  models.rs
src/api/: air_quality.rs  geocoding.rs  mod.rs  weather.rs
