[package]
name = "weather_cli"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI tool for weather information"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["derive", "wrap_help"] }
reqwest = { version = "0.11.6", features = [
  "json",
  "blocking",
  "gzip",
  "deflate",
] }
dotenv = { version = "0.15.0", features = ["clap"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
serde_json = "1.0.108"
chrono-tz = "0.8.4"

[package.metadata.rpm]
package = "weatherCLI"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
weatherCLI = { path = "/usr/bin/weatherCLI" }
